<resources>
    <string name="app_name">TEST COVID-19</string>
    <string name="message_accueil">MINISTERE DE LA SANTE FICHE INDIVIDUELLE DE NOTIFICATION DE CAS DE CORONAVIRUS</string>
    <string name="remplir_fiche">Remplir la fiche</string>
    <string name="motif_depistage">Motif de dépistage</string>
    <string name="volontaire">Volontaire</string>
    <string name="contact">Contact</string>
    <string name="voyage_sortant">Voyage sortant</string>
    <string name="suspect">Suspect</string>
    <string name="voyage_entrant">Voyage entrant</string>
    <string name="controle">Contrôle</string>
    <string name="date_prelevement">Date prélèvement</string>
    <string name="heure_prelevement">Heure prélèvement</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="tel_whatsapp">Tél / WhatsApp</string>
    <string name="recevoir_version">Recevoir version électronique</string>
    <string name="valider">Valider</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="profession">Profession</string>
    <string name="masculin">Masculin</string>
    <string name="sexe">Sexe</string>
    <string name="nom_site">Nom site</string>
    <string name="comment_programmer">Comment voulez-vous etre programmé?</string>
    <string name="rdv">Sur rendez-vous</string>
    <string name="ordinaire">De manière ordinaire</string>
    <string name="numero_paiement">Numéro de paiement</string>
    <string name="mode_paiement">Mode de paiement</string>
    <string name="message_paiement_valide">Votre paiement à été validé avec succès. Nous vous rappelerons ultérieurement.</string>
    <string name="quitter">Quitter</string>
    <string name="nouveau">Nouveau</string>
    <string name="OrangeMoney">Orange Money</string>
    <string name="quittance_paiement">Quittance de paiement</string>
    <string name="scaner_code">Scanner le code Qr</string>
    <string name="accueil">Accueil</string>
    <string name="nom_">"Nom: "</string>
    <string name="site_">"Site: "</string>
    <string name="telephone_">"Téléphone: "</string>
    <string name="montant_">"Montant: "</string>
    <string name="date_">"Date: "</string>
</resources>